--- a/assets/styles/sass/pages/error.scss
+++ b/assets/styles/sass/pages/error.scss
@@ -7,3 +7,6 @@
     height: 100%;
   }
 }
+.ns-error + .ns-footer .scroll-to-top-button {
+  display: none;
+}
