--- a/assets/styles/sass/shared/global.scss
+++ b/assets/styles/sass/shared/global.scss
@@ -132,6 +132,5 @@ a {
 // applied to all pages
 
 .page {
-  flex: 0 1 auto;
-  height: 100%;
+  flex: 0 1 100%;
 }
